@@ -19,7 +19,7 @@
  * Cybernetics Oriented Programming (CYBOP) <http://www.cybop.org>
  * Christian Heller <christian.heller@tuxtax.de>
  *
- * @version $RCSfile: handler.c,v $ $Revision: 1.37 $ $Date: 2009-01-21 22:02:04 $ $Author: christian $
+ * @version $RCSfile: handler.c,v $ $Revision: 1.38 $ $Date: 2009-01-24 22:46:10 $ $Author: christian $
  * @author Christian Heller <christian.heller@tuxtax.de>
  */
 
@@ -99,8 +99,9 @@ void handle(void* p0, void* p1, void* p2, void* p3, void* p4, void* p5, void* p6
     int r = *NUMBER_0_INTEGER_MEMORY_MODEL;
 
 /*??
+    fwprintf(stdout, L"TEST handle ac: %i\n", p11);
+    fwprintf(stdout, L"TEST handle *ac: %i\n", *((int*) p11));
     fwprintf(stdout, L"TEST handle a: %ls\n", (wchar_t*) p10);
-    fwprintf(stdout, L"TEST handle ac: %i\n", *((int*) p11));
 */
 
     if (r == *NUMBER_0_INTEGER_MEMORY_MODEL) {
